<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Intec</string>

    <!-- Log in activity -->
    <string name="id">Id / Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter">iniciar</string>
    <string name="incorrect">Usuario o contraseña incorrectos</string>

    <!-- Menu -->
    <string name="student_process">Procesos estudiantiles</string>
    <string name="home">Inicio</string>
    <string name="pre_selection">Preselección</string>
    <string name="selection">Selección</string>
    <string name="retire">Retiro</string>
    <string name="teacher_evaluation">Evaluación profesoral</string>
    <string name="reports">Reportes</string>
    <string name="library">Biblioteca</string>
    <string name="book">Aparta</string>
    <string name="academic_calendar">Calendario Académico</string>
    <string name="grades_revision">Revisión de calificaciones</string>
    <string name="signatures_programs">Programas de asignaturas</string>
    <string name="academic_offer">Oferta academica</string>

    <!-- Main activity -->
    <string name="title_activity_main">Intec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Home fragment -->
    <string name="id_text">ID</string>
    <string name="program">Programa</string>
    <string name="academic_condition">Condición Academica</string>
    <string name="quarter">Trimestre de Ingreso</string>
    <string name="last_condition">Última Condición</string>
    <string name="quarter_index">Índice Trimestral</string>
    <string name="general_index">Índice General</string>
    <string name="validated_credits">Créditos Convalidados</string>
    <string name="approved_credits">Créditos Aprovados</string>
    <string name="approved_quarters">Trimestres Cursados</string>
    <string name="default_field">-</string>

    <string name="alerts">Alertas</string>
    <string name="no_alerts">Usted no tiene alertas</string>

    <string name="selected_signatures">Asignaturas seleccionadas</string>
    <string name="tab_code">Código</string>
    <string name="tab_signature">Asignatura</string>
    <string name="tab_sections">Sec</string>
    <string name="tab_room">Aula</string>
    <string name="tab_monday">Lun</string>
    <string name="tab_tuesday">Ma</string>
    <string name="tab_wednesday">Mi</string>
    <string name="tab_thursday">Ju</string>
    <string name="tab_friday">Vi</string>
    <string name="tab_saturday">Sa</string>
    <string name="tab_grades">Calif</string>
    <string name="tab_teacher">Profesor</string>
    <string name="tab_evaluation">Eval</string>
    <string name="err_delete_title">Atención</string>
    <string name="err_delete">Esta apunto de cancelar la reserva,\n ¿desea continuar?</string>

    <!-- Cubicle Layout -->

    <string name="reserved_hour">Hora reservada</string>
    <string name="duration">Duración</string>
    <string name="location">Localización</string>
    <string name="students">Estudiantes (Tus compañeros)</string>
    <string name="students_2">Estudiantes</string>
    <string name="one_hr">1 Hora</string>
    <string name="two_hr">2 Horas</string>
    <string name="hint_hr">Seleccione la hora</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_id">Id</string>
    <string name="reserve_cubicle">Reservar cubiculo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="status">Estado:</string>
    <string name="avaliable_hours">Horas disponibles</string>

    <string name="location_1">Biblioteca, Segundo piso</string>
    <string name="location_2">Biblioteca, Zotano</string>
    <string name="location_3">AH, 4to piso</string>

    <string name="status_1">En espera</string>
    <string name="status_2">Libre</string>
    <string name="status_3">En uso</string>
    <string name="status_4">Disponible</string>

    <string name="err_1">• Debe de seleccionar la hora a reservar.</string>
    <string name="err_2">• Debe de selccionar la duracion de la reserva.</string>
    <string name="err_3">• Todo estudiante introducido debe de tener un identificador y su nombre.</string>

    <string name="err_msg">Error</string>
    
    <!-- Calendar fragment -->
    
    <string name="quarter_calendar">Calendario trimestral</string>
    <string name="selection_calendar">Calendario selección</string>
    <string name="annual_calendar" tools:ignore="Typos">Calendario anual</string>
    <string name="finance_calendar">Calendario finaciero</string>
    <string name="calendar">Calendario</string>

    <!-- Expandable list headers -->

    <string name="type">Tipo</string>
    <string name="sec">Sec</string>
    <string name="room">Aula</string>
    <string name="teacher" tools:ignore="Typos">Profesor</string>
    <string name="mon">lun</string>
    <string name="tue">Mar</string>
    <string name="wed">Mie</string>
    <string name="thu">Jue</string>
    <string name="fri">Vie</string>
    <string name="sat">Sab</string>

    <!-- Layout heading quarter -->
    
    <string name="code">Clave</string>
    <string name="signature">Asignatura</string>
    <string name="credits">CR</string>
    <string name="prerequisites">Requisito</string>
    <string name="cred_req">Req. Cred</string>

    <!-- Signatures Programs Fragment -->

    <string name="quarter_s">Trimeste</string>

    <!-- Grades Revision Fragment -->

    <string name="signature_rev">Asignatura</string>
    <string name="grade_rev">Calif</string>
    <string name="teacher_rev" tools:ignore="Typos">Profesor/a</string>
    <string name="timing_rev">Fecha Clave</string>
    <string name="states_rev">Estados</string>

    <string name="day_rev">dias</string>

    <string name="request_rev">Solicitar</string>
    <string name="waiting_rev">En espera</string>
    <string name="accepted_rev">Aceptado</string>
    
    <!-- Reports fragment -->
    
    <string name="id_reports_f">ID:</string>
    <string name="name_reports_f">Nombre:</string>
    <string name="program_reports_f">Programa:</string>
    <string name="status_reports_f">Estado:</string>

    <string name="convalidated_reports_f">Créditos Convalidados:</string>
    <string name="aproved_reports_f">Créditos aprovados:</string>
    <string name="credits_reports_f">Créditos programa:</string>
    <string name="signatures_reports_f">Asignaturas aprovadas:</string>

    <string name="report_1">Volante de Calificaciones Finales</string>
    <string name="report_2">Volante Publicación de Medio Término</string>
    <string name="report_3">Historial Académico</string>

    <string name="generate_report">GENERAR</string>

    <!-- Selection / Preselection fragment -->

    <string name="selection_heading">Materias del trimestre</string>
    <string name="selection_title_1">Tipo</string>
    <string name="selection_title_2">Sec.</string>
    <string name="selection_title_3">Aula</string>
    <string name="selection_title_4" tools:ignore="Typos">Profesor</string>
    <string name="selection_title_5">Lun</string>
    <string name="selection_title_6">Mar</string>
    <string name="selection_title_7">Mie</string>
    <string name="selection_title_8">Jue</string>
    <string name="selection_title_9">Vie</string>
    <string name="selection_title_10">Sab</string>
    <string name="selection_title_11">Cupo</string>
    <string name="selection_title_12">Seleccionar</string>
    <string name="selection_heading_2">Materias disponibles</string>
    <string name="btn_1_selection">CANCELAR</string>
    <string name="btn_2_selection">GUARDAR</string>
    <string name="mayor_heading">Selección\nTrimestral</string>
    <string name="mayor_heading_2">Preselección\nTrimestral</string>
    <string name="minor_heading">SELECCIONAR</string>

    <!-- Retire fragment-->

    <string name="retire_heading">Retiro de Materias</string>
    <string name="retire_mat">Retirar</string>

</resources>
