<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/student_process">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home_process"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_preselection_process"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/pre_selection" />
                <item
                    android:id="@+id/nav_selection_process"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/selection" />
                <item
                    android:id="@+id/nav_retire_process"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/retire" />
                <item
                    android:id="@+id/nav_teachers_evaluation"
                    android:icon="@drawable/ic_assignment_ind_black_24dp"
                    android:title="@string/teacher_evaluation" />
                <item
                    android:id="@+id/nav_reports"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/reports" />
                <item
                    android:id="@+id/nav_grades"
                    android:icon="@drawable/ic_class_black_24dp"
                    android:title="@string/grades_revision" />
                <item
                    android:id="@+id/nav_signatures_programs"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/signatures_programs" />
                <item
                    android:id="@+id/nav_academic_offer"
                    android:icon="@drawable/ic_list_black_24dp"
                    android:title="@string/academic_offer" />

            </group>
        </menu>
    </item>

    <item android:title="@string/library">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_book"
                    android:icon="@drawable/ic_event_black_24dp"
                    android:title="@string/book" />
            </group>
        </menu>
    </item>

    <item android:checkable="true"
        android:id="@+id/nav_calendar"
        android:title="@string/academic_calendar"
        android:icon="@drawable/ic_date_range_black_24dp"/>


</menu>
