<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:divider="@drawable/divider_2"
    android:showDividers="middle">

    <TextView

        android:text="@string/selection_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipo"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sec"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lun"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mar"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mie"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jue"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vie"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sab"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <TextView
        android:text="@string/selection_title_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cupo"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp" />

    <CheckBox
        android:text="@string/selection_title_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selection" />

</TableRow>