<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_code"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_signature"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_sections"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_monday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_tuesday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_wednesday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_thursday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_friday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_saturday"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_grades"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/tab_teacher"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_gravity="center" />

</LinearLayout>