<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <TextView

        android:text="@string/selection_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView67"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp"
        android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView66"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView65"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView63"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView62"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView50"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView35"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView34"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView32"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/selection_title_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@android:color/white" />

    <TextView
        android:text="@string/selection_title_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:paddingEnd="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingStart="7dp"
        android:textColor="@android:color/white" />

</TableRow>