<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/signature_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView30"
        android:layout_weight="0.3"
        android:textColor="@android:color/white"
        android:gravity="center" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

    <TextView
        android:text="@string/grade_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView29"
        android:layout_weight="0.1"
        android:textColor="@android:color/white"
        android:gravity="center" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

    <TextView
        android:text="@string/teacher_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:layout_weight="0.3"
        android:textColor="@android:color/white"
        android:gravity="center" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

    <TextView
        android:text="@string/timing_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView27"
        android:layout_weight="0.2"
        android:textColor="@android:color/white"
        android:gravity="center" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

    <TextView
        android:text="@string/states_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView280"
        android:layout_weight="0.2"
        android:textColor="@android:color/white"
        android:gravity="center" />

</LinearLayout>