<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:focusableInTouchMode="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_picker"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:editable="false"
        android:hint="@string/hint_hr" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hr"
            android:id="@+id/radioButton"
            android:layout_margin="10dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_hr"
            android:id="@+id/radioButton2"
            android:layout_margin="10dp"
            android:checked="false" />

    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person_add_white_24dp"
        android:background="@drawable/back_number_circle_flat_red"
        android:padding="16dp"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/students"
        android:id="@+id/textView61" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_weight="0.4"
                android:hint="@string/hint_name" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="0.3"
                android:hint="@string/hint_id" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageButton5"
                android:src="@drawable/ic_close_black_24dp"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:tint="@android:color/darker_gray"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>